Fixing some naming errors